2002-01-17  Pat Thoyts <patthoyts@users.soruceforge.net>

	* uuencode.tcl: added support for Trf and fixed length bug
	
2002-01-16  Pat Thoyts <patthoyts@users.soruceforge.net>

	* uuencode.tcl: initial import of uuencode package
	* pkgIndex.tcl: added uuencode package
	
2001-09-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* base64.tcl: Restricted export list to public API.
	  [456255]. Patch by Hemang Lavana
	  <hemanglavana@users.sourceforge.net>

2001-07-31  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* base64.n: Added manpage [446584].

2001-07-10  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* base64.tcl: Frink 2.2 run, fixed dubious code.

2001-06-21  Andreas Kupries <andreas_kupries@users.sourceforge.net

	* base64.tcl: Fixed dubious code reported by frink.

2001-06-02  Miguel Sofer  <mig@utdt.edu>

	* base64.tcl: Greatly increased speed, obtained by: using lists
	  instead of arrays, splitting the input with [binary scan],
	  taking the bytes to be encoded three at a time, and
	  reformulating the decoding algorithm to be purely
	  arithmetic. Improved backwards compatibility, now runs with
	  Tcl8.0.

	  Nudged version to 2.2

2000-10-11  Brent Welch  <welch@ajubasolutions.com>

	* base64.tcl: Fixed bug in base64::decode where trailing
	bytes were not always decoded correctly (!).  This only
	shows up with low-valued characters (less than 0x10) near
	the end of a string that was padded with =

	Nudged version to 2.1 so we can distinquish this version
	that has bug fixes and new features.

2000-10-10  Eric Melski  <ericm@ajubasolutions.com>

	* base64.tcl: Extending base64::encode to accept optional
	arguments ?-maxlen maxlen? and ?-wrapchar wrapchar?, to control
	the line wrapping and the character(s) used to cause the
	wrapping.  Based on work by Joel Saunier.

2000-03-09  Eric Melski  <ericm@scriptics.com>

	* base64.test: Adapted tests to work in tcllib test framework.
