@@ -6,7 +6,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # -------------------------------------------------------------------------
-# RCS: @(#) $Id: uuencode.test,v 1.3 2002/01/17 23:09:40 patthoyts Exp $
+# RCS: @(#) $Id: uuencode.test,v 1.4 2002/04/16 23:10:40 patthoyts Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -62,6 +62,29 @@ test uuencode-1.5 {uudecode string} {
 
 # -------------------------------------------------------------------------
 
+set testdata [list \
+        "begin 644 data.dat" \
+        "75&AE(&-A=\"!S870@;VX@=&AE(&UA=\"X" \
+        "`" \
+        "end" ]
+
+test uuencode-2.1 {uudecode unpadded lines} {
+    catch {::uuencode::uudecode [join $testdata "\n"]} result
+    set result
+} [list [list data.dat 644 "The cat sat on the mat."]]
+
+test uuencode-2.2 {uudecode DOS line endings} {
+    set f [open uuencode.test.data w]
+    fconfigure $f -translation binary
+    puts -nonewline $f [join $testdata "\r\n"]
+    close $f
+    catch {::uuencode::uudecode -file uuencode.test.data} result
+    set result
+} [list [list data.dat 644 "The cat sat on the mat."]]
+
+# -------------------------------------------------------------------------
+
+file delete -force uuencode.test.data    
 ::tcltest::cleanupTests
 
 # Local Variables:
