@@ -1,3 +1,9 @@
+2002-04-17  Pat Thoyts  <patthoyts@users.soruceforge.net>
+
+	* uuencode.tcl: fixed bug #544452 to handle DOS input files and
+	tolerate incorrect uuencoded line lengths.
+	* uuencode.test: added tests for the above bug conditions.
+
 2002-01-17  Pat Thoyts <patthoyts@users.soruceforge.net>
 
 	* uuencode.tcl: added support for Trf and fixed length bug
